--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="product-card">
                 <img src="https://i.ebayimg.com/images/g/iPUAAeSwWwZo9pE0/s-l1600.jpg" alt="TI-84 Plus CE Python Calculator with Games" class="product-image">
                 <div class="product-info">
-                    <h3 class="product-title">TI-84 Plus CE Python - Open Box</h3>
+                    <h3 class="product-title">TI-84 Plus CE - Open Box</h3>
                     <span class="product-condition">New - Open Box</span>
                     <p class="product-price">$135.00</p>
                     <p>TI-84 Plus CE with advanced programming capabilities plus 15+ games pre-loaded. Excellent condition.</p>
