--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="product-card">
                 <img src="https://i.ebayimg.com/images/g/XLsAAeSwtVppitk-/s-l1600.jpg" alt="TI-84 Plus CE Calculator with Games" class="product-image">
                 <div class="product-info">
-                    <h3 class="product-title">TI-84 Plus CE - Used Condition</h3>
+                    <h3 class="product-title">JailBroken TI-84 Plus CE</h3>
                     <span class="product-condition"></span>
                     <p class="product-price">$140.00</p>
                     <p>Texas Instruments TI-84 Plus CE graphing calculator with 15+ pre-loaded games. Fully functional with minor cosmetic wear.</p>
@@ -300,8 +300,8 @@
             <div class="product-card">
                 <img src="https://i.ebayimg.com/images/g/584AAeSwr3No9o4u/s-l1600.jpg" alt="TI-84 Plus CE Calculator with Games" class="product-image">
                 <div class="product-info">
-                    <h3 class="product-title">TI-84 Plus CE - Open Box</h3>
-                    <span class="product-condition">New - Open Box</span>
+                    <h3 class="product-title">JailBroken TI-84 Plus CE</h3>
+                    <span class="product-condition"></span>
                     <p class="product-price">$135.00</p>
                     <p>Texas Instruments TI-84 Plus CE in excellent condition. Opened for game installation, works like new with no functional defects.</p>
                     <a href="https://ebay.us/m/FkWDZR" class="buy-button" target="_blank">Buy on eBay →</a>
@@ -311,8 +311,8 @@
             <div class="product-card">
                 <img src="https://i.ebayimg.com/images/g/iPUAAeSwWwZo9pE0/s-l1600.jpg" alt="TI-84 Plus CE Python Calculator with Games" class="product-image">
                 <div class="product-info">
-                    <h3 class="product-title">TI-84 Plus CE - Open Box</h3>
-                    <span class="product-condition">New - Open Box</span>
+                    <h3 class="product-title">JailBroken TI-84 Plus CE</h3>
+                    <span class="product-condition"></span>
                     <p class="product-price">$135.00</p>
                     <p>TI-84 Plus CE with advanced programming capabilities plus 15+ games pre-loaded. Excellent condition.</p>
                     <a href="https://ebay.us/m/9S9gWB" class="buy-button" target="_blank">Buy on eBay →</a>
